--- a/style.css
+++ b/style.css
@@ -34,13 +34,30 @@ button {
     height: 44px;
     width: 44px;
     outline: none;
-    background: #7c7c7c2b;
+    background: #f3f0f02b;
     color:white;
     cursor: pointer;
     transition: 0.2s ease-in-out;
 }
 
 input.search-bar {
-    
+    border: none;
+    outline: none;
+    padding: 0.4em 1 em;
+    border-radius: 24px;
+    background: #f3f0f02b;
+    color: white;
+    font-family: inherit;
+    font-size: 100%;
+    width: calc(100% - 100px);
+
 }
 
+button:hover {
+    background: #fbfafa7b;
+
+}
+
+h1.temp {
+margin: 0;
+}
