--- a/style.css
+++ b/style.css
@@ -4,20 +4,22 @@ body {
     align-items: center;
     height: 100vh;
     margin: 0;
-    font-family: 'Open Sans', sans-serif;
-    background: #222;
+    font-family: 'Outfit', sans-serif;
+    background: rgba(34, 34, 34, 0.757);
     background-image: url('https://images.unsplash.com/photo-1561583534-09e822ba83ba?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1474&q=80');
     background-size: cover;
     font-size: 120%;
 }
 .card {
-    background: #7b7a7a5d;
+    background: #514f4fb7;
     color: white;
     padding: 2em;
     border-radius: 30px;
     width: 100%;
     max-width: 420px;
     margin: 1em;
+    
+  
 }
 
 .search {
@@ -64,15 +66,32 @@ margin-bottom: 0.4em;
 }
 
 .flex {
-    display: flex;
+    display:flex;
     align-items: center;
+  
 
 }
 .description {
     text-transform: capitalize;
     margin-left: 10px;
+    text-align: center;
 }
 
 .weather.loading {
     visibility: hidden;
+    max-height: 20px;
+    position: relative;
+}
+
+.weather.loading:after {
+    visibility: visible;
+    content: "Loading...";
+    color: white;
+    position: absolute;
+    top: 0;
+    left: 20px;
+}
+
+.icon {
+    align-items: center;
 }
